--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,8 +48,9 @@ blockquote, q {
 	}
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+	border-collapse: separate;
+	border-spacing: 1em;
+
 }
 
 body {
@@ -176,9 +177,6 @@ input, select, textarea {
 		font-style: italic;
 	}
 
-	p {
-		margin: 0 0 2em 0;
-	}
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #fff;
@@ -588,13 +586,14 @@ input, select, textarea {
 		}
 
 	ul {
-		list-style: disc;
+		list-style: none;
 		margin: 0 0 2em 0;
 		padding-left: 1em;
 	}
 
 		ul li {
 			padding-left: 0.5em;
+			white-space:pre
 		}
 
 		ul.alt {
@@ -1380,7 +1379,7 @@ input, select, textarea {
 			-moz-transition: -moz-transform 0.5s ease, opacity 0.5s ease;
 			-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
 			-ms-transition: -ms-transform 0.5s ease, opacity 0.5s ease;
-			transition: transform 0.5s ease, opacity 0.5s ease;
+			transition: transform 1s ease, opacity 1s ease;
 			display: inline-block;
 			
 			opacity: 1;
@@ -1416,24 +1415,21 @@ input, select, textarea {
 				right: 0;
 			} */
 
-		#banner p {
-			letter-spacing: 0.225em;
-			text-transform: uppercase;
-		}
+	
 
-			#banner p a {
+			/* #banner p a {
 				color: inherit;
-			}
+			} */
 
 		#banner .more {
 			-moz-transition: -moz-transform 0.75s ease, opacity 0.75s ease;
 			-webkit-transition: -webkit-transform 0.75s ease, opacity 0.75s ease;
 			-ms-transition: -ms-transform 0.75s ease, opacity 0.75s ease;
 			transition: transform 0.75s ease, opacity 0.75s ease;
-			-moz-transition-delay: 2.5s;
-			-webkit-transition-delay: 2.5s;
-			-ms-transition-delay: 2.5s;
-			transition-delay: 2.5s;
+			-moz-transition-delay: 5s;
+			-webkit-transition-delay: 5s;
+			-ms-transition-delay: 5s;
+			transition-delay: 5s;
 			-moz-transform: translateY(0);
 			-webkit-transform: translateY(0);
 			-ms-transform: translateY(0);
@@ -1477,10 +1473,10 @@ input, select, textarea {
 			-webkit-transition: opacity 3s ease-in-out;
 			-ms-transition: opacity 3s ease-in-out;
 			transition: opacity 3s ease-in-out;
-			-moz-transition-delay: 0.5s;
-			-webkit-transition-delay: 0.55s;
-			-ms-transition-delay:0.5s;
-			transition-delay: 0.5s;
+			-moz-transition-delay: 5s;
+			-webkit-transition-delay: 5s;
+			-ms-transition-delay:5s;
+			transition-delay: 5s;
 			content: '';
 			background: #2e3842;
 			display: block;
@@ -1513,7 +1509,7 @@ input, select, textarea {
 
 		}
 
-	body.is-preload #banner h2 {
+	body.is-preload #banner p {
 		-moz-transform: scale(0.95);
 		-webkit-transform: scale(0.95);
 		-ms-transform: scale(0.95);
@@ -1617,14 +1613,14 @@ input, select, textarea {
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHero.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHero.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHero.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHero.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal.jpg#");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size: cover;
+		background-size: 100vh;
 		padding-top: 0;
 	}
 
@@ -1636,7 +1632,7 @@ input, select, textarea {
 		background: none;
 	}
 
-	body.is-mobile.landing #banner,
+	/* body.is-mobile.landing #banner,
 	body.is-mobile.landing .wrapper.style4 {
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url("../../images/backgroundHeroHorizontal.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url("../../images/backgroundHeroHorizontal.jpg");
@@ -1644,8 +1640,9 @@ input, select, textarea {
 		background-image: linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url("../../images/backgroundHeroHorizontal.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size: cover;
-	}
+		background-size: 100vh;
+		
+	} */
 
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
@@ -1656,7 +1653,7 @@ input, select, textarea {
 		max-height: 150px;
 	}
 
-	#banner .handwriting {
+	.handwriting {
 		letter-spacing: normal;
 		text-transform: none;
 		font-family: 'Tangerine', cursive;
@@ -1664,25 +1661,24 @@ input, select, textarea {
 		margin-bottom: 0;
 		font-weight: 900;
 		line-height: 1.65em;
+		margin: 0,5em 0
 	}
 
-	@media screen and (max-width:760px ) {
-		.handwriting {
-			margin-top: -0.5em;
-		}
-	}
+	
 
-	#one {
+	 #one {
 		min-height: 100vh;
 		padding: 0;
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("../../images/Unbenannt-2.png");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("../../images/Unbenannt-2.png");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("../../images/Unbenannt-2.png");
-		background-image: linear-gradient(top, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("../../images/Unbenannt-2.png");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal2.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal2.jpg");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal2.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/backgroundHeroHorizontal2.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size: cover;
+		background-size: 100vh;
 	}
+
+	
 
 	#banner .zitat {
 		font-size: 1.5em;
@@ -1771,13 +1767,18 @@ input, select, textarea {
 
 	#one .trauerfeierDetails p{
 		
-		color: white;
-		max-width: 75%;
+		color: white;		
 		margin: 0 auto;
 		
 		font-size: 1.1em;
 		line-height: 1.5;
 		
+	}
+
+	#one .w65 {
+		max-width: 60%;
+		margin: 0 auto;
+		padding-top: 5%;
 	}
 
 		.portraitBild {
@@ -1824,6 +1825,7 @@ input, select, textarea {
 		margin:0;
 		
 	}
+	
 
 	@media screen and (max-width:500px) {
 	
@@ -1914,10 +1916,10 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.75s ease, opacity 0.75s ease;
 			-ms-transition: -ms-transform 0.75s ease, opacity 0.75s ease;
 			transition: transform 0.75s ease, opacity 0.75s ease;
-			-moz-transition-delay: 2.5s;
-			-webkit-transition-delay: 2.5s;
-			-ms-transition-delay: 2.5s;
-			transition-delay: 2.5s;
+			-moz-transition-delay: 5s;
+			-webkit-transition-delay: 5s;
+			-ms-transition-delay: 5s;
+			transition-delay: 5s;
 			-moz-transform: translateY(0);
 			-webkit-transform: translateY(0);
 			-ms-transform: translateY(0);
@@ -1961,10 +1963,10 @@ input, select, textarea {
 			-webkit-transition: opacity 3s ease-in-out;
 			-ms-transition: opacity 3s ease-in-out;
 			transition: opacity 3s ease-in-out;
-			-moz-transition-delay: 0.5s;
-			-webkit-transition-delay: 0.55s;
-			-ms-transition-delay:0.5s;
-			transition-delay: 0.5s;
+			-moz-transition-delay:3s;
+			-webkit-transition-delay: 3s;
+			-ms-transition-delay:3s;
+			transition-delay:3s;
 			content: '';
 			background: #2e3842;
 			display: block;
@@ -2008,5 +2010,42 @@ input, select, textarea {
 	#banner .inner h5 {
 		margin-top: -1em;
 		font-size: 0.6em;
+	}
+}
+
+@keyframes fade-in{
+	0%{opacity:0;}
+	100%{ opacity: 1;}
+}
+
+@keyframes fade-out {
+0%{opacity:1;}
+100%{ opacity: 0;}
+}
+
+.fade-in{
+	animation: fade-in 2.5
+}
+
+.fade-out {
+	animation: fade-out 2.5s;
+	animation-fill-mode: forwards;
+}
+.hidden {
+	display: none;
+}
+
+.center {
+	margin: 3em auto
+}
+
+
+@media screen and (max-width: 600px) {
+	.handwriting {
+    font-size: 2em;
+	}
+
+	p, table {
+		font-size: 0.8em;
 	}
 }
